force-app/main/default/objects/Case/fields/Action_Comments__c.field-meta.xml
<CustomField>
    <fullName>Action_Comments__c</fullName>
    <label>Action Comments</label>
    <type>TextArea</type>
</CustomField>