force-app/main/default/objects/Case/fields/ConsultationQuestion__c.field-meta.xml
<CustomField>
    <fullName>ConsultationQuestion__c</fullName>
    <label>ConsultationQuestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>