force-app/main/default/objects/Case/fields/Current_Logg__c.field-meta.xml
<CustomField>
    <fullName>Current_Logg__c</fullName>
    <formula>CreatedBy.Id=$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Logged In User</label>
    <type>Checkbox</type>
</CustomField>