force-app/main/default/objects/Case/fields/ITPT_AccountableSeniorLeader__c.field-meta.xml
<CustomField>
    <fullName>ITPT_AccountableSeniorLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountable Senior Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>