force-app/main/default/objects/Case/fields/ITPT_ProjectLead__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>