force-app/main/default/objects/Case/fields/ITPT_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectName__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>