force-app/main/default/objects/Case/fields/ITPT_ResponsibleDirector__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ResponsibleDirector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>