force-app/main/default/objects/Case/fields/MDR_Reason_for_the_Replacement__c.field-meta.xml
<CustomField>
    <fullName>MDR_Reason_for_the_Replacement__c</fullName>
    <label>MDR Reason for the Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>