force-app/main/default/objects/Case/fields/MDR_Type_oF_Request__c.field-meta.xml
<CustomField>
    <fullName>MDR_Type_oF_Request__c</fullName>
    <label>MDR Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Change in Features</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>