force-app/main/default/objects/Case/fields/PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatus__c</fullName>
    <label>PreviousStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>