force-app/main/default/objects/Case/fields/Record_Category__c.field-meta.xml
<CustomField>
    <fullName>Record_Category__c</fullName>
    <label>Record Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File &amp; Record Management</fullName>
            </value>
            <value>
                <fullName>Software &amp; Licenses</fullName>
            </value>
            <value>
                <fullName>IT Equipment &amp; Infrastructure</fullName>
            </value>
            <value>
                <fullName>Network, Voice and Connectivity</fullName>
            </value>
            <value>
                <fullName>Email, Calendar and Collaboration</fullName>
            </value>
            <value>
                <fullName>Database Administration</fullName>
            </value>
            <value>
                <fullName>Data Services and Systems</fullName>
            </value>
            <value>
                <fullName>IT Security</fullName>
            </value>
            <value>
                <fullName>Application Deployment</fullName>
            </value>
            <value>
                <fullName>DIT Enterprise Applications</fullName>
            </value>
            <value>
                <fullName>DOHMH Applications</fullName>
            </value>
            <value>
                <fullName>Non-DOHMH Applications</fullName>
            </value>
            <value>
                <fullName>Mobile Device Request</fullName>
            </value>
            <value>
                <fullName>Account &amp; Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>