force-app/main/default/objects/Case/fields/Record_Division__c.field-meta.xml
<CustomField>
    <fullName>Record_Division__c</fullName>
    <label>Record Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IIT</fullName>
                <default>true</default>
                <label>IIT</label>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>CHE</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>DIS</fullName>
            </value>
            <value>
                <fullName>EHS</fullName>
            </value>
            <value>
                <fullName>EPI</fullName>
            </value>
            <value>
                <fullName>EPR</fullName>
            </value>
            <value>
                <fullName>FCH</fullName>
            </value>
            <value>
                <fullName>FDC</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>MHY</fullName>
            </value>
            <value>
                <fullName>OEA</fullName>
            </value>
            <value>
                <fullName>OGC</fullName>
            </value>
            <value>
                <fullName>CME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>