force-app/main/default/objects/Case/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>CASE( RecordType.Name , &apos;IT Mobile Service Record Type&apos;, &apos;IT Mobile Service Record Type&apos;, 
&apos;Service Record Center&apos;, &apos;Service Record Center&apos;,
RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>