force-app/main/default/objects/Case/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <label>Related Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>