force-app/main/default/objects/Case/fields/Related_Record_Description__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Description__c</fullName>
    <label>Related Record Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>