force-app/main/default/objects/Case/fields/Related_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_URL__c</fullName>
    <label>Related Record URL</label>
    <type>Url</type>
</CustomField>