force-app/main/default/objects/Case/fields/Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Description__c</fullName>
    <inlineHelpText>Please add your comments before resolving this ticket</inlineHelpText>
    <label>Resolution Description</label>
    <type>TextArea</type>
</CustomField>