force-app/main/default/objects/Case/fields/User_Is_ProjectLead__c.field-meta.xml
<CustomField>
    <fullName>User_Is_ProjectLead__c</fullName>
    <formula>$User.Id =  ITPT_ProjectLead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is ProjectLead</label>
    <type>Checkbox</type>
</CustomField>