force-app/main/default/objects/Case/fields/User_Is_ResponsibleDirector__c.field-meta.xml
<CustomField>
    <fullName>User_Is_ResponsibleDirector__c</fullName>
    <formula>$User.Id =  ITPT_ResponsibleDirector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is ResponsibleDirector</label>
    <type>Checkbox</type>
</CustomField>