force-app/main/default/objects/Case/fields/User_Is_Senior_Leader__c.field-meta.xml
<CustomField>
    <fullName>User_Is_Senior_Leader__c</fullName>
    <formula>$User.Id =  ITPT_AccountableSeniorLeader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is Senior Leader</label>
    <type>Checkbox</type>
</CustomField>