force-app/main/default/objects/Case/recordTypes/Application_Default.recordType-meta.xml
<RecordType>
    <fullName>Application_Default</fullName>
    <active>true</active>
    <businessProcess>DOHMH EE Default Support Process</businessProcess>
    <label>Application Default</label>
</RecordType>