force-app/main/default/objects/Case/recordTypes/Assistive_Technology_Devices_Tracking_System.recordType-meta.xml
<RecordType>
    <fullName>Assistive_Technology_Devices_Tracking_System</fullName>
    <active>true</active>
    <businessProcess>Assistive Technology Devices Tracking System</businessProcess>
    <label>Assistive Technology Devices Tracking System</label>
</RecordType>