force-app/main/default/objects/Case/recordTypes/eForm.recordType-meta.xml
<RecordType>
    <fullName>eForm</fullName>
    <active>true</active>
    <businessProcess>DOHMH EE Default Support Process</businessProcess>
    <label>eForm</label>
</RecordType>