force-app/main/default/objects/Case/recordTypes/IT_Mobile_Service_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>IT_Mobile_Service_Record_Type</fullName>
    <active>true</active>
    <businessProcess>IT Mobile Process</businessProcess>
    <label>IT Mobile Service Record Type</label>
</RecordType>