force-app/main/default/objects/Case/recordTypes/IT_Project_Intake_Request.recordType-meta.xml
<RecordType>
    <fullName>IT_Project_Intake_Request</fullName>
    <active>true</active>
    <businessProcess>IT Project Intake Request</businessProcess>
    <label>IT Project Intake Request</label>
</RecordType>