force-app/main/default/objects/Case/recordTypes/IT_Project_Tracker.recordType-meta.xml
<RecordType>
    <fullName>IT_Project_Tracker</fullName>
    <active>true</active>
    <businessProcess>IT Project Tracker</businessProcess>
    <label>IT Project Tracker</label>
</RecordType>