force-app/main/default/objects/Case/recordTypes/IT_Project_Tracker_Status_Report.recordType-meta.xml
<RecordType>
    <fullName>IT_Project_Tracker_Status_Report</fullName>
    <active>true</active>
    <businessProcess>IT Project Tracker Status Report</businessProcess>
    <label>IT Project Tracker Status Report</label>
</RecordType>