force-app/main/default/objects/Case/recordTypes/Print_Requisition.recordType-meta.xml
<RecordType>
    <fullName>Print_Requisition</fullName>
    <active>true</active>
    <businessProcess>DOHMH EE Default Support Process</businessProcess>
    <label>Print Requisition</label>
</RecordType>