force-app/main/default/objects/Case/recordTypes/Publication_Tracking_Request.recordType-meta.xml
<RecordType>
    <fullName>Publication_Tracking_Request</fullName>
    <active>true</active>
    <businessProcess>DOHMH EE Default Support Process</businessProcess>
    <label>Publication Tracking Request</label>
</RecordType>