force-app/main/default/objects/Case/recordTypes/Service_Catalog.recordType-meta.xml
<RecordType>
    <fullName>Service_Catalog</fullName>
    <active>true</active>
    <businessProcess>wkdw__IT Process</businessProcess>
    <description>This record type is used for service catalog requests</description>
    <label>Service Catalog</label>
</RecordType>