force-app/main/default/objects/Case/recordTypes/Transportation_Request.recordType-meta.xml
<RecordType>
    <fullName>Transportation_Request</fullName>
    <active>true</active>
    <businessProcess>DOHMH EE Default Support Process</businessProcess>
    <label>Transportation Request</label>
</RecordType>