force-app/main/default/objects/Case/recordTypes/wkdw__HR_Benefits.recordType-meta.xml
<RecordType>
    <fullName>wkdw__HR_Benefits</fullName>
    <active>true</active>
    <businessProcess>wkdw__HR</businessProcess>
    <label>HR - Benefits</label>
</RecordType>