force-app/main/default/objects/Case/recordTypes/wkdw__HR_Employee_Relations.recordType-meta.xml
<RecordType>
    <fullName>wkdw__HR_Employee_Relations</fullName>
    <active>true</active>
    <businessProcess>wkdw__HR</businessProcess>
    <label>HR - Employee Relations</label>
</RecordType>