force-app/main/default/objects/Case/recordTypes/wkdw__HR_General.recordType-meta.xml
<RecordType>
    <fullName>wkdw__HR_General</fullName>
    <active>true</active>
    <businessProcess>wkdw__HR</businessProcess>
    <label>HR - General</label>
</RecordType>