force-app/main/default/objects/Case/recordTypes/wkdw__HR_Leave.recordType-meta.xml
<RecordType>
    <fullName>wkdw__HR_Leave</fullName>
    <active>true</active>
    <businessProcess>wkdw__HR</businessProcess>
    <label>HR - Leave</label>
</RecordType>