force-app/main/default/objects/Case/recordTypes/wkdw__HR_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>wkdw__HR_Onboarding</fullName>
    <active>true</active>
    <businessProcess>wkdw__HR</businessProcess>
    <label>HR - Onboarding</label>
</RecordType>