force-app/main/default/objects/Case/recordTypes/wkdw__HR_Payroll.recordType-meta.xml
<RecordType>
    <fullName>wkdw__HR_Payroll</fullName>
    <active>true</active>
    <businessProcess>wkdw__HR</businessProcess>
    <label>HR - Payroll</label>
</RecordType>