force-app/main/default/objects/Case/validationRules/Check_Resolution_Description_is_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Resolution_Description_is_Null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Resolution_Description__c) &amp;&amp; ISPICKVAL(Status, &apos;Closed&apos;)</errorConditionFormula>
    <errorDisplayField>Resolution_Description__c</errorDisplayField>
    <errorMessage>Please fill the Resolution Description before closing the ticket.</errorMessage>
</ValidationRule>