force-app/main/default/objects/Case/listViews/ADM_BCR_Admin_Case.listView-meta.xml
<ListView>
    <fullName>ADM_BCR_Admin_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ADM_BCR_Admin</label>
    <queue>ADM_BCR_Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>