force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Related_Record_ID__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>MDR_Reason_for_the_Replacement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Cases</label>
</ListView>