force-app/main/default/objects/Case/listViews/BCR_Graphic_Group_Case.listView-meta.xml
<ListView>
    <fullName>BCR_Graphic_Group_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BCR Graphic Group</label>
    <queue>BCR_Graphic_Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>