force-app/main/default/objects/Case/listViews/Business_Card_Request.listView-meta.xml
<ListView>
    <fullName>Business_Card_Request</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Reference_Number__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Reference_Number__c</field>
        <operation>contains</operation>
        <value>BCR</value>
    </filters>
    <label>Business Card Request</label>
</ListView>