force-app/main/default/objects/Case/listViews/CPR_My_Requests.listView-meta.xml
<ListView>
    <fullName>CPR_My_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Reference_Number__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reference_Number__c</field>
        <operation>contains</operation>
        <value>CPR</value>
    </filters>
    <filters>
        <field>Created_By_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CPR - My Requests</label>
</ListView>