force-app/main/default/objects/Case/listViews/CPR_My_Tasks.listView-meta.xml
<ListView>
    <fullName>CPR_My_Tasks</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Reference_Number__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Reference_Number__c</field>
        <operation>contains</operation>
        <value>CPR</value>
    </filters>
    <label>CPR - My Tasks</label>
</ListView>