force-app/main/default/objects/Case/listViews/DOHMH_Security_Case.listView-meta.xml
<ListView>
    <fullName>DOHMH_Security_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DOHMH Security</label>
    <queue>DOHMH_Security</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>