force-app/main/default/objects/Case/listViews/HR_Benefits_Case.listView-meta.xml
<ListView>
    <fullName>HR_Benefits_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HR - Benefits</label>
    <queue>HR_Benefits</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>