force-app/main/default/objects/Case/listViews/HR_Employee_Relations_Case.listView-meta.xml
<ListView>
    <fullName>HR_Employee_Relations_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HR - Employee Relations</label>
    <queue>HR_Employee_Relations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>