force-app/main/default/objects/Case/listViews/HR_General_Case.listView-meta.xml
<ListView>
    <fullName>HR_General_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HR - General</label>
    <queue>HR_General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>