force-app/main/default/objects/Case/listViews/HR_Leave_Case.listView-meta.xml
<ListView>
    <fullName>HR_Leave_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HR - Leave</label>
    <queue>HR_Leave</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>